[gd_scene load_steps=34 format=2]

[ext_resource path="res://Escena/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Escena/Coins.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Coins_Colection.gd" type="Script" id=3]
[ext_resource path="res://Scripts/ZonaCaida.gd" type="Script" id=4]
[ext_resource path="res://Rocky Roads (1)/Rocky Roads/Tilesets/tileset_forest.png" type="Texture" id=5]
[ext_resource path="res://Rocky Roads (1)/Rocky Roads/Tilesets/tileset_dirt.png" type="Texture" id=6]
[ext_resource path="res://DecoracionesVarias/TileSet_Gras_Works.png" type="Texture" id=7]
[ext_resource path="res://Rocky Roads (1)/Rocky Roads/Deco/rock.png" type="Texture" id=8]
[ext_resource path="res://DecoracionesVarias/mylevel1_tiles.png" type="Texture" id=9]
[ext_resource path="res://DecoracionesVarias/blue_sky.png" type="Texture" id=10]
[ext_resource path="res://Rocky Roads (1)/Rocky Roads/Objects/coin_small_gold.png" type="Texture" id=11]
[ext_resource path="res://Escena/PauseMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://Escena/Enemy.tscn" type="PackedScene" id=14]
[ext_resource path="res://Rocky Roads (1)/Rocky Roads/Objects/heart.png" type="Texture" id=15]
[ext_resource path="res://Rocky Roads (1)/Rocky Roads/Deco/water_a_8frames.png" type="Texture" id=16]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.917647, 0.921569, 0.933333, 0.282353 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 398.5, 32 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 32, 16, 0, 16, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 48, 0, 0, 0, 0, 16, 48, 16 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 64, 16, 0, 16, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 0, 0, 32, 0, 32, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PoolVector2Array( 32, 48, 0, 48, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 32, 16, 0, 16, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=30]
points = PoolVector2Array( 32, 16, 0, 16, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=31]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=32]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=33]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=39]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=40]
points = PoolVector2Array( 0, 16, 0, 7.375, 6.25, 3.375, 13.25, 6.375, 13.25, 14.375 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 32, 16, 0, 16, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 0, 0, 32, 0, 32, 16, 0, 16 )

[sub_resource type="TileSet" id=27]
0/name = "mylevel1_tiles.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 48, 208, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "mylevel1_tiles.png 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 192, 32, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 15 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "mylevel1_tiles.png 2"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 176, 192, 32, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 22 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "mylevel1_tiles.png 3"
3/texture = ExtResource( 9 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 112, 192, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 23 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "mylevel1_tiles.png 4"
4/texture = ExtResource( 9 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 160, 208, 80, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "mylevel1_tiles.png 5"
5/texture = ExtResource( 9 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 112, 288, 32, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 24 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "mylevel1_tiles.png 6"
6/texture = ExtResource( 9 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 48, 304, 32, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 25 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "mylevel1_tiles.png 7"
7/texture = ExtResource( 9 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 16, 192, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "tileset_dirt.png 8"
8/texture = ExtResource( 6 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 16, 48, 96, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
11/name = "tileset_forest.png 11"
11/texture = ExtResource( 5 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 128, 48, 48, 16 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape = SubResource( 17 )
11/shape_one_way = false
11/shape_one_way_margin = 1.0
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0
12/name = "tileset_forest.png 12"
12/texture = ExtResource( 5 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 32, 16, 64, 16 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape = SubResource( 18 )
12/shape_one_way = false
12/shape_one_way_margin = 1.0
12/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
12/z_index = 0
13/name = "tileset_forest.png 13"
13/texture = ExtResource( 5 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 48, 48, 16, 16 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "tileset_forest.png 14"
14/texture = ExtResource( 5 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 64, 48, 16, 16 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
18/name = "mylevel1_tiles.png 18"
18/texture = ExtResource( 9 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 0, 64, 32, 48 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape = SubResource( 28 )
18/shape_one_way = false
18/shape_one_way_margin = 1.0
18/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
18/z_index = 0
19/name = "TileSet_Gras_Works.png 19"
19/texture = ExtResource( 7 )
19/tex_offset = Vector2( 0, 0 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 144, 32, 32, 48 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shape_offset = Vector2( 0, 0 )
19/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
19/shape = SubResource( 29 )
19/shape_one_way = false
19/shape_one_way_margin = 1.0
19/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
19/z_index = 0
20/name = "TileSet_Gras_Works.png 20"
20/texture = ExtResource( 7 )
20/tex_offset = Vector2( 0, 0 )
20/modulate = Color( 1, 1, 1, 1 )
20/region = Rect2( 16, 48, 32, 16 )
20/tile_mode = 0
20/occluder_offset = Vector2( 0, 0 )
20/navigation_offset = Vector2( 0, 0 )
20/shape_offset = Vector2( 0, 0 )
20/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
20/shape = SubResource( 30 )
20/shape_one_way = false
20/shape_one_way_margin = 1.0
20/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 30 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
20/z_index = 0
21/name = "TileSet_Gras_Works.png 21"
21/texture = ExtResource( 7 )
21/tex_offset = Vector2( 0, 0 )
21/modulate = Color( 1, 1, 1, 1 )
21/region = Rect2( 176, 32, 16, 16 )
21/tile_mode = 0
21/occluder_offset = Vector2( 0, 0 )
21/navigation_offset = Vector2( 0, 0 )
21/shape_offset = Vector2( 0, 0 )
21/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
21/shape = SubResource( 31 )
21/shape_one_way = false
21/shape_one_way_margin = 1.0
21/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 31 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
21/z_index = 0
22/name = "tileset_dirt.png 22"
22/texture = ExtResource( 6 )
22/tex_offset = Vector2( 0, 0 )
22/modulate = Color( 1, 1, 1, 1 )
22/region = Rect2( 48, 32, 32, 16 )
22/tile_mode = 0
22/occluder_offset = Vector2( 0, 0 )
22/navigation_offset = Vector2( 0, 0 )
22/shape_offset = Vector2( 0, 0 )
22/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
22/shape_one_way = false
22/shape_one_way_margin = 0.0
22/shapes = [  ]
22/z_index = 0
23/name = "tileset_forest.png 23"
23/texture = ExtResource( 5 )
23/tex_offset = Vector2( 0, 0 )
23/modulate = Color( 1, 1, 1, 1 )
23/region = Rect2( 16, 32, 16, 16 )
23/tile_mode = 0
23/occluder_offset = Vector2( 0, 0 )
23/navigation_offset = Vector2( 0, 0 )
23/shape_offset = Vector2( 0, 0 )
23/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
23/shape = SubResource( 32 )
23/shape_one_way = false
23/shape_one_way_margin = 1.0
23/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 32 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
23/z_index = 0
24/name = "tileset_forest.png 24"
24/texture = ExtResource( 5 )
24/tex_offset = Vector2( 0, 0 )
24/modulate = Color( 1, 1, 1, 1 )
24/region = Rect2( 96, 32, 16, 16 )
24/tile_mode = 0
24/occluder_offset = Vector2( 0, 0 )
24/navigation_offset = Vector2( 0, 0 )
24/shape_offset = Vector2( 0, 0 )
24/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
24/shape = SubResource( 33 )
24/shape_one_way = false
24/shape_one_way_margin = 1.0
24/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 33 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
24/z_index = 0
25/name = "tileset_forest.png 25"
25/texture = ExtResource( 5 )
25/tex_offset = Vector2( 0, 0 )
25/modulate = Color( 1, 1, 1, 1 )
25/region = Rect2( 50, 15, 1, 4 )
25/tile_mode = 0
25/occluder_offset = Vector2( 0, 0 )
25/navigation_offset = Vector2( 0, 0 )
25/shape_offset = Vector2( 0, 0 )
25/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
25/shape_one_way = false
25/shape_one_way_margin = 0.0
25/shapes = [  ]
25/z_index = 0
26/name = "tileset_forest.png 26"
26/texture = ExtResource( 5 )
26/tex_offset = Vector2( 0, 0 )
26/modulate = Color( 1, 1, 1, 1 )
26/region = Rect2( 48, 16, 16, 16 )
26/tile_mode = 0
26/occluder_offset = Vector2( 0, 0 )
26/navigation_offset = Vector2( 0, 0 )
26/shape_offset = Vector2( 0, 0 )
26/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
26/shape = SubResource( 39 )
26/shape_one_way = false
26/shape_one_way_margin = 1.0
26/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 39 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
26/z_index = 0
27/name = "tileset_forest.png 27"
27/texture = ExtResource( 5 )
27/tex_offset = Vector2( 0, 0 )
27/modulate = Color( 1, 1, 1, 1 )
27/region = Rect2( 96, 16, 16, 16 )
27/tile_mode = 0
27/occluder_offset = Vector2( 0, 0 )
27/navigation_offset = Vector2( 0, 0 )
27/shape_offset = Vector2( 0, 0 )
27/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
27/shape_one_way = false
27/shape_one_way_margin = 0.0
27/shapes = [  ]
27/z_index = 0
28/name = "TileSet_Gras_Works.png 28"
28/texture = ExtResource( 7 )
28/tex_offset = Vector2( 0, 0 )
28/modulate = Color( 1, 1, 1, 1 )
28/region = Rect2( 0, 48, 16, 16 )
28/tile_mode = 0
28/occluder_offset = Vector2( 0, 0 )
28/navigation_offset = Vector2( 0, 0 )
28/shape_offset = Vector2( 0, 0 )
28/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
28/shape = SubResource( 40 )
28/shape_one_way = false
28/shape_one_way_margin = 1.0
28/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 40 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
28/z_index = 0

[node name="Mundo1" type="Node2D"]
light_mask = 4

[node name="Sky" type="Sprite" parent="."]
position = Vector2( 260.5, 165.75 )
scale = Vector2( 1.62708, 0.923611 )
texture = ExtResource( 10 )

[node name="Rock" type="Sprite" parent="Sky"]
position = Vector2( -144.848, 84.7218 )
scale = Vector2( 1, 1.9625 )
texture = ExtResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_left = 2.0
margin_top = 4.0
margin_right = 39.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 13 )

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 10, 10 )
scale = Vector2( 1.09375, 0.96875 )
texture = ExtResource( 11 )
hframes = 6

[node name="Heart1" type="Sprite" parent="CanvasLayer"]
position = Vector2( 51, 9 )
scale = Vector2( 0.875, 0.75 )
texture = ExtResource( 15 )
hframes = 3

[node name="Heart2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 65, 9.5 )
scale = Vector2( 0.875, 0.8125 )
texture = ExtResource( 15 )
hframes = 3

[node name="Heart3" type="Sprite" parent="CanvasLayer"]
position = Vector2( 78.5, 9.5 )
scale = Vector2( 0.8125, 0.8125 )
texture = ExtResource( 15 )
hframes = 3

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 17.0
margin_top = 3.0
margin_right = 37.0
margin_bottom = 17.0
text = ":"

[node name="Coins_Colection_text" type="Label" parent="CanvasLayer"]
anchor_bottom = 0.012
margin_left = 21.0
margin_top = 4.0
margin_right = 39.0
margin_bottom = 10.8
text = "00"

[node name="Caida" type="Area2D" parent="."]
position = Vector2( 24, 133 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Caida"]
position = Vector2( 245, 192 )
shape = SubResource( 34 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 225, 192 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 28, -42 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0
limit_right = 520
limit_bottom = 600
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 4.0

[node name="WaterA8Frames" type="Sprite" parent="."]
position = Vector2( 276, 317 )
scale = Vector2( 3.12891, 2.71094 )
texture = ExtResource( 16 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 5, 139 )
scale = Vector2( 0.99891, 1.0036 )
tile_set = SubResource( 27 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_layer = 4
format = 1
tile_data = PoolIntArray( -393215, 28, 0, -327679, 11, 0, -327678, 11, 0, -327677, 11, 0, -327676, 11, 0, -327665, 21, 0, -262130, 11, 0, -262129, 11, 0, -262128, 11, 0, -262127, 11, 0, -196585, 11, 0, -196584, 11, 0, -196583, 11, 0, -196582, 11, 0, -196581, 11, 0, -196580, 11, 0, -131062, 11, 0, 65543, 11, 0, 131089, 11, 0, 262145, 19, 0, 262148, 11, 0, 262156, 11, 0, 327688, 28, 0, 327709, 20, 0, 393224, 11, 0, 393241, 23, 0, 393242, 26, 0, 393243, 26, 0, 393244, 26, 0, 393245, 26, 0, 393246, 24, 0, 524287, 23, 0, 458752, 26, 0, 458753, 26, 0, 458754, 26, 0, 458755, 26, 0, 458756, 24, 0, 458777, 8, 0, 589823, 8, 0, 524301, 23, 0, 524302, 26, 0, 524303, 26, 0, 524304, 26, 0, 524305, 26, 0, 524306, 24, 0, 524309, 23, 0, 524310, 24, 0, 524313, 8, 0, 655359, 8, 0, 589824, 13, 0, 589825, 13, 0, 589826, 14, 0, 589827, 14, 0, 589832, 23, 0, 589833, 24, 0, 589837, 8, 0, 589849, 8, 0, 589850, 8, 0, 720895, 8, 0, 655373, 8, 0, 655374, 22, 0, 655376, 22, 0, 1441877, 3, 0, 3407861, 0, 0, 3473397, 0, 0, 4718298, 23, 0, 4915269, 8, 0 )

[node name="PauseMenu" parent="." instance=ExtResource( 13 )]
pause_mode = 2
margin_left = 212.0
margin_top = 147.0
margin_right = 212.0
margin_bottom = 147.0

[node name="Enemy" parent="." instance=ExtResource( 14 )]
position = Vector2( 485, 80 )

[node name="Coins" parent="." instance=ExtResource( 2 )]
position = Vector2( 28, 197 )

[node name="Coins4" parent="Coins" instance=ExtResource( 2 )]
position = Vector2( 408, -132 )

[node name="Coins3" parent="Coins" instance=ExtResource( 2 )]
position = Vector2( 125, 17 )

[node name="Coins5" parent="Coins" instance=ExtResource( 2 )]
position = Vector2( 233, -92 )

[node name="Coins" parent="Coins" instance=ExtResource( 2 )]
position = Vector2( 404, 15.0001 )
scale = Vector2( 0.99891, 1.0036 )

[node name="Coins7" parent="Coins" instance=ExtResource( 2 )]
position = Vector2( 257, -146 )
scale = Vector2( 0.99891, 1.0036 )

[node name="Coins2" parent="Coins" instance=ExtResource( 2 )]
position = Vector2( 174, -24 )

[node name="Coins6" parent="." instance=ExtResource( 2 )]
position = Vector2( 82, 181 )

[connection signal="body_entered" from="Caida" to="Caida" method="_on_Area2D_body_entered"]
